# data-cdc-decrypt-with-python

./: .gitignore  README.md  pyproject.toml  requirements.txt  template.yaml
cdc_decrypt/: aws_utils.py  cipher.py  handler.py  main.py
data/: config.json  data_encrypted.json  mock_data.json
events/: event.json
tests/: test_encrypt_decrypt.py  test_parse_filename.py
